# django-sage-session

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  tox.ini
docs/source/: conf.py
docs/source/getting_started/: admin.rst  handler.rst  index.rst  installation.rst  middleware.rst  models.rst  modules.rst
sage_session/: apps.py  urls.py
sage_session/admin/: __init__.py  user_session.py
sage_session/backends/: __init__.py  session.py
sage_session/encryptors/: __init__.py  base.py  fernet_encrypt.py
sage_session/handlers/: session.py
sage_session/middleware/: __init__.py  session.py  track.py
sage_session/models/: user_session.py
sage_session/templates/: user_sessions.html
sage_session/tests/: test_backend.py  test_handlers.py  test_middleware.py  test_track.py  test_urls.py
sage_session/tests/handlers/: test_session.py
sage_session/views/: __init__.py  session.py
