[tool.poetry]
name = "django-sage-session"
version = "0.1.0"
description = ""
authors = ["abolfazl jazak <jazakabolfazl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
cryptography = "^43.0.0"
commitizen = "^3.29.0"



[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
