[tool.poetry]
name = "django-sage-session"
version = "0.1.0"
description = ""
authors = ["abolfazl jazak <jazakabolfazl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
django = ">=4.2,<6.0"
cryptography = "^43.0.0"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.29.0"
tox = "^4.18.0"
pytest = "^8.3.2"
pytest-django = "^4.8.0"
isort = "^5.13.2"
black = "^24.8.0"
ruff = "^0.6.3"
pre-commit = "3.5.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "sage_session"